# angel-of-death

./: .gitignore  README.md
grammar/: gedcom  summary.md
parser/: .clang-format  CMakeLists.txt  example.ged  main.c
parser/src/: context.c  context.h  dynarray.c  dynarray.h  errcodes.h  errhandler.c  errhandler.h  gedcom.c  gedcom.h  hashmap.c  hashmap.h  hashtable.c  hashtable.h  lexer.c  lexer.h  parser.c  parser.h  statuscode.h  stringbuilder.c  stringbuilder.h
parser/src/context/: context.c  context.h  genstate.c  genstate.h
parser/src/tags/: base.c  base.h  header.c  header.h  month.c  month.h
parser/src/utils/: dynarray.c  dynarray.h  hashmap.c  hashmap.h  ptrarr.c  ptrarr.h  statuscode.h  stringbuilder.c  stringbuilder.h
